--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-  "dependencies": {
+    "dependencies": {
+    "element-ui": "^2.4.11",
+    "ethjs": "^0.4.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
