--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "element-ui": "^2.4.11",
+    "ethjs": "^0.4.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
