--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-    "dependencies": {
+  "dependencies": {
     "element-ui": "^2.4.11",
     "ethjs": "^0.4.0",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-device-detector": "github:weilbith/vue-device-detector"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
