--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "element-ui": "^2.4.11",
     "ethjs": "^0.4.0",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "web3": "^1.0.0-beta.35"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
